--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,24 @@
   <artifactId>maven-quick-start</artifactId>
 
   <version>1.0</version>
+ 
+ <dependencies>
+ 
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+        <version>3.7</version>	
+	</dependency>
+
+</dependencies> 
+
   
     <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.5.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
