--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <artifactId>maven-quick-start</artifactId>
 
-  <version>1.0</version>
+  <version>1.1</version>
  
  <dependencies>
  
@@ -23,7 +23,12 @@
 		<artifactId>commons-lang3</artifactId>
         <version>3.7</version>	
 	</dependency>
-
+    <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+	<scope>test</scope>
+</dependency>
 </dependencies> 
 
   
